--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#"><i class="fas fa-phone"></i> +123-456-7890</a>
-                <a href="#"><i class="fas fa-phone"></i> +111-222-3333</a>
-                <a href="#"><i class="fas fa-envelope"></i> coffee@gmail.com</a>
-                <a href="#"><i class="fas fa-envelope"></i> Perú, Lima</a>
+                <a href="#"><i class="fas fa-phone"></i> +212604034421</a>
+                <a href="#"><i class="fas fa-phone"></i> +212604034421</a>
+                <a href="#"><i class="fas fa-envelope"></i> admajd2007@gmail.com</a>
+                <a href="#"><i class="fas fa-envelope"></i> Morocco, Marrakech</a>
             </div>
 
             <div class="box">
